--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -2,15 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url("https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap"); */
 
-/* @layer base {
+@layer base {
     html {
         font-family: Lato, system-ui, sans-serif;
     }
-} */
+}
 
 body {
   background-color: #000000;
-  font-family: "Lato", "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  /* font-family: "Lato", "Segoe UI", Tahoma, Geneva, Verdana, sans-serif; */
 }
